// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputField component renders a field with a  number input 1`] = `
.sx03kze6obnf--css {
  margin: auto;
}

.sx03kze6obnf--css {
  height: 100px;
  width: 100px;
}

.sxfigyv {
  appearance: none;
  border: 1px solid var(--colors-tonal500);
  border-radius: var(--radii-0);
  box-shadow: none;
  box-sizing: border-box;
  color: var(--colors-tonal900);
  cursor: text;
  display: block;
  font-family: var(--fonts-sans);
  font-size: var(--fontSizes-md);
  height: var(--sizes-2);
  width: 100%;
  padding: var(--space-3);
}

.sxfigyv {
  transition: all 100ms ease-out;
}

.sxfigyv:focus {
  border-color: var(--colors-primary900);
  box-shadow: inset 0 0 0 1px var(--colors-primary900);
  outline: none;
}

.sxfigyv[disabled] {
  background-color: var(--colors-tonal300);
  color: var(--colors-tonal700);
  cursor: not-allowed;
}

.sx9hj4y {
  color: var(--colors-secondary300);
  display: block;
  font-family: var(--fonts-sans);
  font-weight: 500;
  letter-spacing: 0.02em;
  line-height: 1.4;
  margin: 0;
}

.sx9hj4yvs8z6--size-md {
  font-size: var(--fontSizes-md);
}

.sx9hj4yb2uuy--css {
  margin-bottom: var(--space-2);
}

<div>
  <div
    class="sx03kze sx03kze6obnf--css"
  >
    <label
      class="sx9hj4y sx9hj4yvs8z6--size-md sx9hj4yb2uuy--css"
      for="INPUT FIELD"
    >
      INPUT FIELD
    </label>
    <input
      class="sxfigyv"
      id="INPUT FIELD"
      inputmode="numeric"
      name="INPUT FIELD"
      pattern="[0-9]*"
      placeholder="001"
      type="text"
    />
  </div>
</div>
`;

exports[`InputField component renders a field with a text input 1`] = `
.sx03kze6obnf--css {
  margin: auto;
}

.sx03kze6obnf--css {
  height: 100px;
  width: 100px;
}

.sxfigyv {
  appearance: none;
  border: 1px solid var(--colors-tonal500);
  border-radius: var(--radii-0);
  box-shadow: none;
  box-sizing: border-box;
  color: var(--colors-tonal900);
  cursor: text;
  display: block;
  font-family: var(--fonts-sans);
  font-size: var(--fontSizes-md);
  height: var(--sizes-2);
  width: 100%;
  padding: var(--space-3);
}

.sxfigyv {
  transition: all 100ms ease-out;
}

.sxfigyv:focus {
  border-color: var(--colors-primary900);
  box-shadow: inset 0 0 0 1px var(--colors-primary900);
  outline: none;
}

.sxfigyv[disabled] {
  background-color: var(--colors-tonal300);
  color: var(--colors-tonal700);
  cursor: not-allowed;
}

.sx9hj4y {
  color: var(--colors-secondary300);
  display: block;
  font-family: var(--fonts-sans);
  font-weight: 500;
  letter-spacing: 0.02em;
  line-height: 1.4;
  margin: 0;
}

.sx9hj4yvs8z6--size-md {
  font-size: var(--fontSizes-md);
}

.sx9hj4yb2uuy--css {
  margin-bottom: var(--space-2);
}

<div>
  <div
    class="sx03kze sx03kze6obnf--css"
  >
    <label
      class="sx9hj4y sx9hj4yvs8z6--size-md sx9hj4yb2uuy--css"
      for="INPUT FIELD"
    >
      INPUT FIELD
    </label>
    <input
      class="sxfigyv"
      id="INPUT FIELD"
      name="INPUT FIELD"
      placeholder="INPUT FIELD"
      type="text"
    />
  </div>
</div>
`;
